[workspace]
resolver = "3"
members = [ "codegen", "protocol", "tcp", "types", "uri" ]

[workspace.package]
version = "10.0.0-rc.2"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/amqp-rs/amq-protocol"
categories = ["api-bindings", "network-programming"]
keywords = ["amqp","rabbitmq","protocol","nom"]
edition = "2024"
rust-version = "1.85.0"
