[workspace]
resolver = "3"
members = [ "codegen", "protocol", "tcp", "types", "uri" ]

[workspace.package]
version = "10.5.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/amqp-rs/amq-protocol"
readme = "README.md"
categories = ["asynchronous", "network-programming", "parser-implementations"]
keywords = ["amqp", "rabbitmq", "protocol", "messaging", "codec"]
edition = "2024"
rust-version = "1.88.0"
