[package]
name          = "amq-protocol-codegen"
version       = "7.3.0"
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP specifications - codegen"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol-codegen"
keywords      = ["amqp","rabbitmq","protocol"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
rust-version  = "1.63.0"

[lib]
name = "amq_protocol_codegen"

[dependencies]
handlebars = "^5.0"
serde_json = "^1.0"

[dependencies.amq-protocol-types]
version = "=7.3.0"
path    = "../types"

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
