[package]
name          = "amq-protocol-codegen"
description   = "AMQP specifications - codegen"
documentation = "https://docs.rs/amq-protocol-codegen"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "amq_protocol_codegen"

[dependencies]
handlebars = "^6.0"
serde_json = "^1.0"

[dependencies.amq-protocol-types]
version = "=8.3.1"
path    = "../types"

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
