[package]
name          = "amq-protocol"
version       = "7.1.0" # remember to update html_root_url
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP specifications"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol"
keywords      = ["amqp","rabbitmq","protocol","nom"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
build         = "build.rs"
rust-version  = "1.63.0"

[lib]
name = "amq_protocol"

[features]
default                   = ["native-tls"]
codegen                   = ["codegen-internal"]
codegen-internal          = ["amq-protocol-codegen"]
native-tls                = ["amq-protocol-tcp/native-tls"]
openssl                   = ["amq-protocol-tcp/openssl"]
rustls                    = ["amq-protocol-tcp/rustls"]
rustls-native-certs       = ["amq-protocol-tcp/rustls-native-certs"]
rustls-webpki-roots-certs = ["amq-protocol-tcp/rustls-webpki-roots-certs"]
vendored-openssl          = ["amq-protocol-tcp/vendored-openssl"]
verbose-errors            = ["amq-protocol-types/verbose-errors"]

[build-dependencies.amq-protocol-codegen]
version  = "=7.1.0"
path     = "../codegen"
optional = true

[dependencies.amq-protocol-tcp]
version          = "=7.1.0"
default-features = false
path             = "../tcp"

[dependencies.amq-protocol-types]
version = "=7.1.0"
path    = "../types"

[dependencies.amq-protocol-uri]
version = "=7.1.0"
path    = "../uri"

[dependencies.cookie-factory]
version  = "^0.3"
features = ["std"]

[dependencies.nom]
version  = "^7.0"
features = ["std"]

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
