[package]
name          = "amq-protocol"
version       = "8.0.0"
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP specifications"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol"
keywords      = ["amqp","rabbitmq","protocol","nom"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
build         = "build.rs"
rust-version  = "1.74.0"

[lib]
name = "amq_protocol"

[features]
default                   = ["rustls"]
codegen                   = ["codegen-internal"]
codegen-internal          = ["dep:amq-protocol-codegen"]
native-tls                = ["amq-protocol-tcp/native-tls"]
openssl                   = ["amq-protocol-tcp/openssl"]
rustls                    = ["amq-protocol-tcp/rustls"]
rustls-native-certs       = ["amq-protocol-tcp/rustls-native-certs"]
rustls-webpki-roots-certs = ["amq-protocol-tcp/rustls-webpki-roots-certs"]
vendored-openssl          = ["amq-protocol-tcp/vendored-openssl"]
verbose-errors            = ["amq-protocol-types/verbose-errors"]

# rustls crypto providers. Choose at least one. Otherwise, runtime errors.
# See https://docs.rs/rustls/latest/rustls/#crate-features. for more info
rustls--aws_lc_rs         = ["amq-protocol-tcp/rustls--aws_lc_rs"] # default, but doesn't build everywhere
rustls--ring              = ["amq-protocol-tcp/rustls--ring"] # more compatible, (e.g., easily builds on Windows)

[build-dependencies.amq-protocol-codegen]
version  = "=8.0.0"
path     = "../codegen"
optional = true

[dependencies.amq-protocol-tcp]
version          = "=8.0.0"
default-features = false
path             = "../tcp"

[dependencies.amq-protocol-types]
version = "=8.0.0"
path    = "../types"

[dependencies.amq-protocol-uri]
version = "=8.0.0"
path    = "../uri"

[dependencies.cookie-factory]
version          = "^0.3"
default-features = false
features         = ["std"]

[dependencies.nom]
version  = "^8.0"
features = ["std"]

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
