[package]
name          = "amq-protocol-tcp"
version       = "8.0.0-alpha.4"
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP URI TCP connection handling"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol-tcp"
keywords      = ["amqp","rabbitmq","protocol"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
rust-version  = "1.74.0"

[lib]
name = "amq_protocol_tcp"

[features]
default                   = ["rustls"]
native-tls                = ["tcp-stream/native-tls"]
openssl                   = ["tcp-stream/openssl"]
rustls                    = ["rustls-native-certs", "rustls--aws_lc_rs"]
rustls-native-certs       = ["rustls-common", "tcp-stream/rustls-native-certs"]
rustls-webpki-roots-certs = ["rustls-common", "tcp-stream/rustls-webpki-roots-certs"]
rustls-common             = ["tcp-stream/rustls-common"]
vendored-openssl          = ["tcp-stream/vendored-openssl"]

# rustls crypto providers. Choose at least one. Otherwise, runtime errors.
# See https://docs.rs/rustls/latest/rustls/#crate-features. for more info
rustls--aws_lc_rs         = ["tcp-stream/rustls--aws_lc_rs"] # default, but doesn't build everywhere
rustls--ring              = ["tcp-stream/rustls--ring"] # more compatible, (e.g., easily builds on Windows)

[dependencies.amq-protocol-uri]
version = "=8.0.0-alpha.4"
path    = "../uri"

[dependencies.tcp-stream]
version          = "^0.29.1"
default-features = false

[dependencies.tracing]
version          = "^0.1"
default-features = false

[badges]
maintenance = { status = "actively-developed" }
