[package]
name          = "amq-protocol-types"
version       = "8.0.0-alpha.3"
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP specifications - types"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol-types"
keywords      = ["amqp","rabbitmq","protocol","nom"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
rust-version  = "1.74.0"

[lib]
name = "amq_protocol_types"

[features]
verbose-errors = []

[dependencies]
serde_json = "^1.0"

[dependencies.cookie-factory]
version          = "^0.3"
default-features = false
features         = ["std"]

[dependencies.nom]
version  = "=8.0.0-alpha2"
features = ["std"]

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
