[package]
name          = "amq-protocol-types"
description   = "AMQP specifications - types"
documentation = "https://docs.rs/amq-protocol-types"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "amq_protocol_types"

[features]
verbose-errors = []

[dependencies]
serde_json = "^1.0"

[dependencies.cookie-factory]
version          = "^0.3"
default-features = false
features         = ["std"]

[dependencies.nom]
version  = "^8.0"
features = ["std"]

[dependencies.serde]
version  = "^1.0"
features = ["derive"]

[package.metadata.docs.rs]
all-features = true
