[package]
name          = "amq-protocol-uri"
version       = "8.0.0-alpha.1"
edition       = "2021"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "AMQP URI manipulation"
repository    = "https://github.com/amqp-rs/amq-protocol"
documentation = "https://docs.rs/amq-protocol-uri"
keywords      = ["amqp","rabbitmq","protocol"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"
rust-version  = "1.63.0"

[lib]
name = "amq_protocol_uri"

[dependencies.amq-protocol-types]
version = "=8.0.0-alpha.1"
path    = "../types"

[dependencies]
percent-encoding = "^2.0"
url              = "^2.0"

[badges]
maintenance = { status = "actively-developed" }
