[package]
name          = "amq-protocol-uri"
description   = "AMQP URI manipulation"
documentation = "https://docs.rs/amq-protocol-uri"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "amq_protocol_uri"

[dependencies.amq-protocol-types]
version = "=10.3.1"
path    = "../types"

[dependencies]
percent-encoding = "^2.0"
url              = "^2.0"

[package.metadata.docs.rs]
all-features = true
